added a screensaver (after 5 min) to prevent any burnout

--- a/columntest.css
+++ b/columntest.css
@@ -10,3 +10,14 @@
 p {
     font-size: 100%;
 }
+
+#screensaver { 
+  position: absolute; 
+  width: 100%; 
+  height:100%; 
+  left:0px; 
+  top: 0px; 
+  display: none; 
+  z-index:9999;
+  overflow:auto;
+}
